syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "BikeStoreGolang/api-gateway/proto/auth;authpb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Activate(ActivateRequest) returns (ActivateResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc GetMe(GetMeRequest) returns (UserResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

enum Role {
  ROLE_CUSTOMER = 0;
  ROLE_ADMIN = 1;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string id = 1;
  string message = 2;
}

message ActivateRequest {
  string token = 1;
}

message ActivateResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  UserResponse user = 3;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  string message = 1;
}

message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  string message = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message GetMeRequest {}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
}

message LogoutRequest {
  string access_token = 1;
}

message LogoutResponse {
  string message = 1;
}